v0.20.0: a defeated fact stays believed outside the context that decided the clash, and the belief record is renamed Reasoning
Signed-off-by: vaelii-admin <289251560+vaelii-admin@users.noreply.github.com>